# Ragger

./: .coveragerc  .gitignore  README.md  config.ini  docker-compose.yml  dockerfile  dockerfile_neo4j  pyproject.toml  ragger_example.py  ragger_example_retrieve.py  ragger_example_submit.py  set_config_variables.py  test_process_chunk.py
.github/workflows/: unit_tests.yaml
data/text/: ml_article_text.txt
docker/build_dev/: docker-compose.yml  dockerfile
docker/integration_tests/: docker-compose.yml  dockerfile
docker/unit_tests/: docker-compose.yml  dockerfile
docs/R&D/: splitting_algorithm_development.ipynb  text_splitter_comparison_v2_any.csv  text_splitter_comparison_v2_sequential.csv
examples/: example_of_usage_manual.ipynb  ragger_example_retrieve.py  ragger_example_submit.py
ragger/: __init__.py  context_search.py  ragger.py
ragger/data_manager/: __init__.py  data_classes.py  manager.py
ragger/data_manager/communication/: __init__.py  communication.py
ragger/data_manager/communicator/: __init__.py  communicator.py  query_builder.py
ragger/data_manager/preprocessor/: __init__.py  embedder.py  extractor.py  preprocessor.py  splitting_algorithm_development.ipynb  text_splitter.py
ragger/data_manager/processor/: __init__.py  embedder.py  (+2 more)
ragger/utils/: __init__.py  set_config_variables.py
requirementes/: base.txt
requirements/: base.txt  test.txt
src/: __init__.py
src/context_search/: __init__.py  context_search.py
test/data_manager_test/: literature_dataclass_test.py  type_recon_test.py
test/integration_tests/: config.ini
(+43 files in other folders)
